<resources>
    <string name="app_name">NgenyProject</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Login</string>
    <string name="login_text">Login</string>
    <string name="home_text">Home</string>
    <string name="ngeny">Ngeny</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="button">Button</string>
    <string name="je_deja_un_compte">je deja un compte?</string>
    <string name="se_connecter">se connecter</string>
    <string name="nom">Nom</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="pas_encore_de_compte">Pas encore de compte?</string>
    <string name="signin">Signin</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="title_activity_position">PositionActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>